--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -69,3 +69,28 @@ header img {
     line-height: 1.8rem;
     color: var(--soft-orange);
 }
+.header__title-container .header__button {
+    position: absolute;
+    left: calc(50% - 11.5rem);
+    top: 27rem;
+    display: block;
+    margin-top: 3.5rem;
+    padding: 1.5rem;
+    width: 22.9rem;
+    height: 4.8rem;
+    background-color: var(--off-white);
+    box-shadow: 0px 4px 8px rgba(89, 73, 30, 0.16);
+    border: none;
+    border-radius: 0.5rem;
+    font-size: 1.4rem;
+    font-weight: bold;
+    text-decoration: none;
+    color: var(--black);
+}
+.header__button span {
+    display: inline-block;
+    width: 13px;
+    height: 8px;
+    margin-left: 10px;
+    background-image: url(/assets/icons/down_arrow.svg);
+}
