--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -30,6 +30,7 @@ html {
     font-size: 62.50%;
     font-family: "DM Sans", sans-serif;
 }
+/*----------------HEADER STYLES--------------*/
 header {
     position: relative;
     display: flex;
@@ -93,4 +94,23 @@ header img {
     height: 8px;
     margin-left: 10px;
     background-image: url(/assets/icons/down_arrow.svg);
+}
+/*--------------------MAIN STYLES-------------------*/
+main {
+    width: 100%;
+    height: auto;
+    background-color: var(--off-white) ;
+}
+.main-exchange-container {
+    width: 100%;
+    height: auto;
+    padding-top: 8rem;
+    padding-bottom: 3rem;
+    text-align: center;
+}
+.main-exchange-container--title {
+    width: 90%;
+    min-width: 288px;
+    max-width: 900px;
+    margin: 0 auto;
 }
