--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -412,23 +412,22 @@ p.index {
     color: #808080;
 }
 /*--------BENEFITS SECTION: CARDS---------*/
-.product-cards {
+.product-cards__card {
     width: 90%;
     min-width: 288px;
     max-width: 400px;
-    height: 150px;
+    height: auto;
     margin: 15px auto;
     padding: 15px;
     background-color: var(--black);
     border-radius: 5px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.16);
 }
-.product-cards__card--clock {
+.product-cards__card--icon {
     display: inline-block;
     width: 24px;
     height: 24px;
     margin-bottom: 10px;
-    background-image: url(/assets/icons/clock.svg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -446,6 +445,22 @@ p.index {
     line-height: 1.8rem;
     color: #808080;
 }
+.clock {
+    background-image: url(/assets/icons/clock.svg);
+}
+.eye {
+    background-image: url(/assets/icons/eye.svg);
+}
+.dollar {
+    background-image: url(/assets/icons/dollar-sign.svg);
+}
+.check {
+    background-image: url(/assets/icons/check.svg);
+}
+.last {
+    margin-bottom: 64px;
+}
+
 
 
 
