Added the wildcard section. Restablished distance between last section and this one.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -458,9 +458,27 @@ p.index {
     background-image: url(/assets/icons/check.svg);
 }
 .last {
-    margin-bottom: 64px;
+    margin-bottom: 47px;
 }
+/*----------------------BITCOIN BABY-----------------*/
+.bitcoin-img-container {
+    width: 100%;
+    min-width: 320px;
+    height: 50vh;
+    background-image: url(/assets/images/bitcoinbaby2x.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    text-align: center;
+}
+.bitcoin-img-container h2 {
+    padding-top: 60px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6;
+    color: var(--white);
 
+}
 
 
 
