Initial commit for the section

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -477,8 +477,7 @@ p.index {
     font-weight: bold;
     line-height: 2.6;
     color: var(--white);
-
 }
-
+/*------------------- PLAN SECTION -------------------- */
 
 
