--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -490,7 +490,6 @@ p.index {
     min-width: 288px;
     height: auto;
     margin: 0 auto;
-    margin-bottom: 50px;
 }
 .plans--title h2 {
     padding-top: 64px;
@@ -508,11 +507,11 @@ p.index {
 }
 .plans-container--card {
     position: relative;
-    width: 70%;
+    width: 65%;
     min-width: 230px;
     max-width: 300px;
     height: 250px;
-    margin: 50px auto 0;
+    margin: 50px 8px 0;
     padding: 0 15px;
     background-color: var(--white);
     border-radius: 15px;
@@ -520,6 +519,7 @@ p.index {
 }
 .recommended {
     position: absolute;
+    scroll-snap-align: center;
     width: 101px;
     height: 31px;
     padding: 7px;
@@ -559,10 +559,48 @@ p.index {
 }
 .plan-card__saving {
     width: 158px;
-    margin: 0 auto 16px;
+    margin: 0 auto;
     font-family: var(--font-inter);
     font-size: 1.2rem;
     font-weight: 500;
     line-height: 1.452rem;
     color: var(--table-currency);
+}
+.plan-card__call-to-action {
+    width: 151px;
+    height: 48px;
+    margin-top: 16px;
+    padding-bottom: 3px;
+    background-color: var(--off-white);
+    border: 2px solid var(--bitcoin-orange);
+    border-radius: 4px;
+    font-size: 1.4rem;
+    font-weight: 700;
+    line-height: 1.823rem;
+    color: var(--warm-black);
+}
+.plan-card__call-to-action span {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-image: url(/assets/icons/button_right_arrow.svg);
+    vertical-align: text-bottom;
+}
+#single-peso {
+    left: calc(50% - 50px);
+}
+/* SLIDER */
+.plans-container--slider {
+    display: flex;
+    height: 316px;
+    overflow-x: scroll;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: x proximity;
+}
+.plans-container--slider::-webkit-scrollbar {
+    background-color: var(--soft-orange);
+    height: 3px;
+}
+.plans-container--slider::-webkit-scrollbar-thumb {
+    background-color: var(--bitcoin-orange);
 }
